bfinder/templates/stateful.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: statefulservice
spec:
  selector:
    matchLabels:
      app: statefulservice
  serviceName: statefulservice
  replicas: 2
  template:
    metadata:
      labels:
        app: statefulservice
    spec:
      containers:
      - name: statefulservice
        image: registry.k8s.io/nginx-slim:0.8
        ports:
        - containerPort: 80
          name: web
        volumeMounts:
        - name: www
          mountPath: /usr/share/nginx/html
  volumeClaimTemplates:
  - metadata:
      name: www
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
