bfinder/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: booksfinder
spec:
  selector:
    app: booksfinder
  ports:
  - port: 80
    targetPort: 80
