bfinder/templates/hostingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: booksfinder
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    cert-manager.io/cluster-issuer: letsencrypt-prod
    # nginx.ingress.kubernetes.io/add-base-url: "false"
  labels:
    name: booksfinder
spec:
  rules:
  - host: bfinder.codifydaily.com
    http:
      paths:
      - pathType: Prefix
        path: "/finder"
        backend:
          service:
            name: booksfinder
            port: 
              number: 80

      - pathType: Prefix
        path: "/nginx"
        backend:
          service:
            name: nginx
            port: 
              number: 80
  tls:
    - hosts:
        - bfinder.codifydaily.com
      secretName: tls-2048-kibana
